// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiToast Props color danger is rendered 1`] = `
<OuiToast
  color="danger"
  title="test title"
>
  <div
    className="ouiToast ouiToast--danger"
  >
    <OuiScreenReaderOnly>
      <p
        className="ouiScreenReaderOnly"
      >
        <OuiI18n
          default="A new notification appears"
          token="ouiToast.newNotification"
        >
          A new notification appears
        </OuiI18n>
      </p>
    </OuiScreenReaderOnly>
    <OuiI18n
      default="Notification"
      token="ouiToast.notification"
    >
      <div
        aria-label="Notification"
        className="ouiToastHeader"
        data-test-subj="ouiToastHeader"
      >
        <span
          className="ouiToastHeader__title"
        >
          test title
        </span>
      </div>
    </OuiI18n>
  </div>
</OuiToast>
`;

exports[`OuiToast Props color primary is rendered 1`] = `
<OuiToast
  color="primary"
  title="test title"
>
  <div
    className="ouiToast ouiToast--primary"
  >
    <OuiScreenReaderOnly>
      <p
        className="ouiScreenReaderOnly"
      >
        <OuiI18n
          default="A new notification appears"
          token="ouiToast.newNotification"
        >
          A new notification appears
        </OuiI18n>
      </p>
    </OuiScreenReaderOnly>
    <OuiI18n
      default="Notification"
      token="ouiToast.notification"
    >
      <div
        aria-label="Notification"
        className="ouiToastHeader"
        data-test-subj="ouiToastHeader"
      >
        <span
          className="ouiToastHeader__title"
        >
          test title
        </span>
      </div>
    </OuiI18n>
  </div>
</OuiToast>
`;

exports[`OuiToast Props color success is rendered 1`] = `
<OuiToast
  color="success"
  title="test title"
>
  <div
    className="ouiToast ouiToast--success"
  >
    <OuiScreenReaderOnly>
      <p
        className="ouiScreenReaderOnly"
      >
        <OuiI18n
          default="A new notification appears"
          token="ouiToast.newNotification"
        >
          A new notification appears
        </OuiI18n>
      </p>
    </OuiScreenReaderOnly>
    <OuiI18n
      default="Notification"
      token="ouiToast.notification"
    >
      <div
        aria-label="Notification"
        className="ouiToastHeader"
        data-test-subj="ouiToastHeader"
      >
        <span
          className="ouiToastHeader__title"
        >
          test title
        </span>
      </div>
    </OuiI18n>
  </div>
</OuiToast>
`;

exports[`OuiToast Props color warning is rendered 1`] = `
<OuiToast
  color="warning"
  title="test title"
>
  <div
    className="ouiToast ouiToast--warning"
  >
    <OuiScreenReaderOnly>
      <p
        className="ouiScreenReaderOnly"
      >
        <OuiI18n
          default="A new notification appears"
          token="ouiToast.newNotification"
        >
          A new notification appears
        </OuiI18n>
      </p>
    </OuiScreenReaderOnly>
    <OuiI18n
      default="Notification"
      token="ouiToast.notification"
    >
      <div
        aria-label="Notification"
        className="ouiToastHeader"
        data-test-subj="ouiToastHeader"
      >
        <span
          className="ouiToastHeader__title"
        >
          test title
        </span>
      </div>
    </OuiI18n>
  </div>
</OuiToast>
`;

exports[`OuiToast Props iconType is rendered 1`] = `
<OuiToast
  iconType="user"
  title="test title"
>
  <div
    className="ouiToast"
  >
    <OuiScreenReaderOnly>
      <p
        className="ouiScreenReaderOnly"
      >
        <OuiI18n
          default="A new notification appears"
          token="ouiToast.newNotification"
        >
          A new notification appears
        </OuiI18n>
      </p>
    </OuiScreenReaderOnly>
    <OuiI18n
      default="Notification"
      token="ouiToast.notification"
    >
      <div
        aria-label="Notification"
        className="ouiToastHeader"
        data-test-subj="ouiToastHeader"
      >
        <OuiIcon
          aria-hidden="true"
          className="ouiToastHeader__icon"
          size="m"
          type="user"
        >
          <span
            aria-hidden="true"
            className="ouiToastHeader__icon"
            data-ouiicon-type="user"
            size="m"
          />
        </OuiIcon>
        <span
          className="ouiToastHeader__title"
        >
          test title
        </span>
      </div>
    </OuiI18n>
  </div>
</OuiToast>
`;

exports[`OuiToast Props title is rendered 1`] = `
<OuiToast
  title="toast title"
>
  <div
    className="ouiToast"
  >
    <OuiScreenReaderOnly>
      <p
        className="ouiScreenReaderOnly"
      >
        <OuiI18n
          default="A new notification appears"
          token="ouiToast.newNotification"
        >
          A new notification appears
        </OuiI18n>
      </p>
    </OuiScreenReaderOnly>
    <OuiI18n
      default="Notification"
      token="ouiToast.notification"
    >
      <div
        aria-label="Notification"
        className="ouiToastHeader"
        data-test-subj="ouiToastHeader"
      >
        <span
          className="ouiToastHeader__title"
        >
          toast title
        </span>
      </div>
    </OuiI18n>
  </div>
</OuiToast>
`;

exports[`OuiToast is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiToast testClass1 testClass2"
  data-test-subj="test subject string"
>
  <p
    class="ouiScreenReaderOnly"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="ouiToastHeader ouiToastHeader--withBody"
    data-test-subj="ouiToastHeader"
  >
    <span
      class="ouiToastHeader__title"
    >
      test title
    </span>
  </div>
  <div
    class="ouiText ouiText--small ouiToastBody"
  >
    <p>
      Hi
    </p>
  </div>
</div>
`;
